--- a/corporate.html
+++ b/corporate.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row justify-content-between py-5 text-center">
                 <div class="col-md-3">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
@@ -71,14 +71,14 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">500৳/MONTH</h4>
+                            <h4 class="d-block taka">500৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 offers">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-md-3 mb-md-2 offers">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
@@ -88,14 +88,14 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">800৳/MONTH</h4>
+                            <h4 class="d-block taka">800৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 offers">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
@@ -105,7 +105,7 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">1000৳/MONTH</h4>
+                            <h4 class="d-block taka">1000৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
@@ -114,7 +114,7 @@
             </div>
             <div class="row justify-content-between py-5 text-center">
                 <div class="col-md-3 offers">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">BASIC</h5>
@@ -124,14 +124,14 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">1200৳/MONTH</h4>
+                            <h4 class="d-block taka">1200৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 offers">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">PRIMARY</h5>
@@ -141,14 +141,14 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">1500৳/MONTH</h4>
+                            <h4 class="d-block taka">1500৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 offers">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 100%;">
                         <i class="fas fa-wifi text-center py-3"></i>
                         <div class="card-body">
                             <h5 class="card-title bg-danger text-light py-2 mb-3">DOMINANT</h5>
@@ -158,7 +158,7 @@
                                 <li>Fiber Optics</li>
                                 <li>24/7 Customer Care</li>
                             </ul>
-                            <h4 class="d-inline-block taka">2000৳/MONTH</h4>
+                            <h4 class="d-block taka">2000৳/MONTH</h4>
                             <a href="#" class="btn btn-primary"><i class="fas fa-shopping-cart text-warning"></i>Buy
                                 Now</a>
                         </div>
