--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h2>Let your business to grow with us</h2>
             <p class="lead"> We offer a full range of fast, superfast and ultrafast broadband packages</p>
         </div>
-        <hr class="grow d-block" style="height:5px; border-width:0px; background-color:yellow"> 
+        <hr class="grow d-block mx-auto" style="height:5px; width: 70%; border-width:0px; background-color:yellow"> 
         <div class="container py-5">
             <strong class="text-warning">BUINESS:</strong> 
             <p class="lead bus-text">
